--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,11 +5,11 @@ def capacitor_pods
   use_frameworks!
   pod 'Capacitor', :path => '../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../node_modules/@capacitor/ios'
+  pod 'Flurry-iOS-SDK/FlurrySDK'
 end
 
 target 'Plugin' do
   capacitor_pods
-  pod 'Flurry-iOS-SDK/FlurrySDK' #Analytics Pod
 end
 
 target 'PluginTests' do
