--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+    implementation 'com.google.android.gms:play-services-ads-identifier:17.1.0'
+    implementation 'com.flurry.android:analytics:14.0.0'
 }
