--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crowdhub-plugin-flurryanalytics",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "This plugin provides an interface for Capacitor apps to use the Flurry Analytics API",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
@@ -34,10 +34,8 @@
     "verify:ios": "cd ios && pod install && xcodebuild -workspace Plugin.xcworkspace -scheme Plugin -destination generic/platform=iOS && cd ..",
     "verify:android": "cd android && ./gradlew clean build test && cd ..",
     "verify:web": "npm run build",
-    "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
-    "fmt": "npm run eslint -- --fix && npm run prettier -- --write && npm run swiftlint -- --fix --format",
-    "eslint": "eslint . --ext ts",
-    "prettier": "prettier \"**/*.{css,html,ts,js,java}\"",
+    "lint": "npx rome check src && npm run swiftlint -- lint",
+    "fmt": "npx rome format src --write && npm run swiftlint -- --fix --format",
     "swiftlint": "node-swiftlint",
     "docgen": "docgen --api FlurryAnalyticsPlugin --output-readme README.md --output-json dist/docs.json",
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.js",
@@ -50,25 +48,17 @@
     "@capacitor/core": "^4.0.0",
     "@capacitor/docgen": "^0.0.18",
     "@capacitor/ios": "^4.0.0",
-    "@ionic/eslint-config": "^0.3.0",
-    "@ionic/prettier-config": "^1.0.1",
     "@ionic/swiftlint-config": "^1.1.2",
-    "eslint": "^7.11.0",
-    "prettier": "~2.3.0",
-    "prettier-plugin-java": "~1.0.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.32.0",
+    "rome": "^10.0.0",
     "swiftlint": "^1.0.1",
     "typescript": "~4.1.5"
   },
   "peerDependencies": {
     "@capacitor/core": "^4.0.0"
   },
-  "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
-  "eslintConfig": {
-    "extends": "@ionic/eslint-config/recommended"
-  },
   "capacitor": {
     "ios": {
       "src": "ios"
